# augur

./: README.md  augur.cabal
exe/: Main.hs
lib/: Augur.hs
lib/Augur/: Calculations.hs  Export.hs  Pretty.hs  Simulation.hs  Types.hs
