cabal-version:      3.4
name:               augur
version:            0.1.0.0
author:             Jacob Boxerman
build-type:         Simple

common default-settings
    default-language: GHC2021
    default-extensions:
      OverloadedRecordDot

library
    import: default-settings
    hs-source-dirs:   lib
    exposed-modules:
      Augur
      Augur.Config
      Augur.Pretty
      Augur.Simulation
      Augur.Types
    build-depends:
      base ^>=4.19.2.0,
      time,
      Decimal,
      containers

executable augur
    import: default-settings
    ghc-options:      -Wall -O2 -threaded
    hs-source-dirs:   exe
    main-is:          Main.hs
    build-depends:
        base ^>=4.19.2.0,
        augur
